# abb_irb140_ros_sim

./: README.md  raspbi  run.py  steps.text
apc_abb_interface/: CMakeLists.txt  package.xml
apc_abb_interface/config/: controllers.yaml
apc_abb_interface/launch/: irb140_connection.launch
apc_abb_interface/scripts/: gripper_state.py
apc_gripper/: CMakeLists.txt  package.xml
apc_gripper/config/: gazebo_pid.yaml  joints.yaml
apc_gripper/launch/: config.rviz  gripper_gazebo.launch  rviz.launch
apc_gripper/meshes/: mesh_cuerpo.stl  mesh_dedo.stl  mesh_eslabon_externo.stl  mesh_eslabon_interno.stl  mesh_soporte.stl
apc_gripper/urdf/: gripper.gazebo  gripper.xacro  gripper_old.xacro  joints.xacro
apc_gripper_old/: CMakeLists.txt  package.xml
apc_gripper_old/launch/: config.rviz  gripper_gazebo.launch  rviz.launch
apc_gripper_old/urdf/: gripper.gazebo  gripper.xacro  joints.xacro
apc_gripper_original/: CMakeLists.txt  package.xml
apc_gripper_original/launch/: config.rviz  gripper_gazebo.launch  rviz.launch
apc_gripper_original/urdf/: gripper.gazebo  gripper.xacro  joints.xacro
apc_gripper_position/: CMakeLists.txt  package.xml
apc_gripper_position/config/: joints.yaml
apc_gripper_position/launch/: gripper_gazebo.launch  rviz.launch
apc_gripper_position/meshes/: mesh_dedo_eslabon.stl  mesh_eslabon.stl  mesh_soporte.stl
apc_gripper_position/urdf/: gripper.gazebo  gripper.xacro  joints.xacro
apc_irb140/: CMakeLists.txt  cmd.txt  package.xml
apc_irb140/config/: controllers.yaml  rviz_config.rviz  rviz_gazebo_config.rviz  rviz_icac.rviz
apc_irb140/launch/: irb140_gazebo.launch  irb140_rviz.launch  moveit_interface.launch  test.launch
apc_irb140/objetos/1_estante/: model.config
apc_irb140/objetos/5x5/: 5x5_50_7.dae
apc_irb140/objetos/apple/: collision.dae  model.config
apc_irb140/objetos/banana/: model.config
apc_irb140/objetos/c_cups/: collision.dae
apc_irb140/objetos/camara/: model.config  model.sdf
apc_irb140/objetos/foam/: model.config  model.sdf
apc_irb140/objetos/g_cups/: collision.dae  model.config
apc_irb140/objetos/gelatin/: collision.dae  model.config  model.sdf
apc_irb140/objetos/mesa/: mesa.STL  model.config  model.sdf
apc_irb140/objetos/pear/: collision.dae
apc_irb140/objetos/phillips/: collision.dae
apc_irb140/objetos/scissors/: collision.dae  model.sdf
apc_irb140/objetos/tazon/: collision.dae
apc_irb140/urdf/: irb140.xacro  irb140_alter.xacro
apc_irb140/worlds/: labsir_sim.world  layout.world  scena.scene  test.scene  test.world
apc_irb140_moveit/: .setup_assistant  CMakeLists.txt  package.xml
apc_irb140_moveit/config/: abb_irb140.srdf  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
apc_irb140_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  (+8 more)
documentation/: moveit_demos.md
grasping/: CMakeLists.txt  package.xml
irb140_commander/: CMakeLists.txt  package.xml
irb140_commander/action/: Joints.action  PoseRPY.action
irb140_commander/config/: cfg.rviz  cfg_rviz_commander.rviz
irb140_commander/launch/: commander_gazebo.launch  commander_rviz.launch  irb140_commander.launch
irb140_commander/msg/: Joints.msg  OrientConst.msg  PoseRPY.msg  PoseRPYarray.msg
irb140_commander/scripts/: gripper.py  gripper_routine.py  path_sub.py  pick_routine.py  plot.py  poseAction.py  pose_commander.py  sendJoints.py  sendPose.py  sendPoseArray.py  sendPoseRPYarray.py  send_PoseRPY.py  test_script.py
irb140_commander/src/: action_test.cpp  get_pose.cc  joint_commander.cpp  joint_commander_copia.cpp  orientation_constraint.cc  path_commander.cc  path_commander_1.cc  path_commander_back.cc  path_const.cc  pose_commander.cc  pose_commander.cpp  pose_commander_back.cc  robot_commander.cpp  test_commander.cpp
irb140_commander/src/old/: joint_commander copy.cpp  path_commander copy.cc
irb140_moveit/: .setup_assistant  CMakeLists.txt  package.xml
irb140_moveit_bin_pick/: .setup_assistant  CMakeLists.txt  package.xml
irb140_moveit_real/: .setup_assistant  CMakeLists.txt  package.xml
irb140_ros_interface/: CMakeLists.txt  package.xml
irb140_sim/: CMakeLists.txt  Readme.md  package.xml
irb140_sim/config/joints/: joints.yaml
irb140_sim/config/rqt/: rqt_irb140_tuner.perspective
irb140_sim/config/rviz/: rviz_config.rviz  rviz_gazebo_config.rviz
irb140_sim/launch/: bin_picking.launch  bin_picking_f.launch  datatake.launch  estante_picking.launch  irb140_alter.launch  irb140_gazebo.launch  irb140_pick_test.launch  irb140_rviz.launch  irb140_tune_controllers.launch  labsir.launch  moveit_interface.launch  test.launch  transformadas.launch
irb140_sim/objetos/1_estante/: model.sdf
irb140_sim/objetos/2_estante/: model.config  model.sdf
irb140_sim/objetos/apple/: model.sdf
irb140_sim/objetos/banana/: collision.dae  model.sdf
irb140_sim/objetos/c_cups/: model.config  model.sdf
irb140_sim/objetos/foam/: collision.dae  model.sdf
irb140_sim/objetos/g_cups/: model.sdf
irb140_sim/objetos/pear/: model.config  model.sdf
irb140_sim/objetos/phillips/: model.config  model.sdf
irb140_sim/objetos/scissors/: model.config
irb140_sim/objetos/sugar/: collision.dae  model.config  model.sdf
irb140_sim/objetos/tazon/: model.config  model.sdf
irb140_sim/objetos/tuna/: collision.dae  model.config  model.sdf
irb140_sim/urdf/: irb140.gazebo  irb140.xacro  irb140_alter.xacro  irb140_idea.xacro  irb140_joints.xacro
irb140_sim/worlds/: bin_picking.world  bin_picking_f.world  broken.world  datatake.world  estante_picking.world  labsir_sim.world  picking.world  scena.scene  test.world  test_world.world
multibots/: CMakeLists.txt  package.xml
pick_plugin/: CMakeLists.txt  package.xml
pick_plugin/include/pick_plugin/: pick_plugin.h  pick_plugin2.h  pick_plugin_topic.h
pick_plugin/scripts/: pick_routine.py
pick_plugin/src/: pick_plugin.cpp  pick_plugin_working.cpp  pick_plugin_working2.cpp
robotiq_arg85_description/: urdf.rviz
(+155 files in other folders)
