<?xml version="1.0"?>
<package format="2">
  <name>apc_abb_interface</name>
  <version>0.0.0</version>
  <description>The apc_abb_interface package</description>

  <maintainer email="unal@todo.todo">unal</maintainer>

  <license>TODO</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend></depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>