<?xml version="1.0"?>
<package format="2">
  <name>irb140_sim</name>
  <version>1.0.0</version>
  <description>The irb140_sim package</description>

  <maintainer email="srealper@unal.edu.co">GitSRealpe</maintainer>
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/irb140_sim</url> -->

  <author email="srealper@unal.edu.co">GitSRealpe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
